# qualifier-template

./: .gitignore  Cargo.toml  README.md
src/: entrypoints.rs  executions.rs  msgs.rs  queries.rs  states.rs
src/tests/: instantiate.rs  mod.rs  qualify.rs
