[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
schemars = { version = "0.8.3" }
cosmwasm-std = { version = "0.16.0", features = ["staking"] }
cw-storage-plus = { version = "0.8.1", features = ["iterator"] }
cw20 = { version = "0.8.1" }
thiserror = { version = "1.0.26" }
valkyrie-qualifier = { default-features = false, version = "0.1.0" }
terra-cosmwasm = { version = "2.2.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
